--- a/hod/templates/base.html
+++ b/hod/templates/base.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
-        <title>HOD</title>
+        <title>Login</title>
         {% block css %}
         {% include 'admin/includes/material_css.html' %}
         {% block extrastyle %}{% endblock %}
@@ -29,7 +29,13 @@
         {% endblock head %}
     </head>
     <body class="{% if is_popup %}popup{% endif %}">
+        <header>
+            {% block header %}
+            {% if not is_popup %}
 
+            {% endif %}
+            {% endblock header %}
+        </header>
         <main>
             {% block main %}
                 {% block topbar %}
