HOD views 2/3 done

--- a/hod/templates/hod.html
+++ b/hod/templates/hod.html
@@ -12,7 +12,7 @@
               </div>
           </div>
         </a>
-        <a href="">
+        <a href="/login/hod/faculty/">
           <div class="card">
               <div class="card-content">
                   <span class="card-title black-text">{% trans 'Faculty List' %}</span>
