--- a/hod/templates/hod.html
+++ b/hod/templates/hod.html
@@ -19,7 +19,7 @@
                 </div>
             </div>
           </a>
-          <a href="">
+          <a href="/login/hod/student/">
             <div class="card">
                 <div class="card-content">
                     <span class="card-title black-text">{% trans 'Student List' %}</span>
