Faculty view, Class_Tchr authentication update in login,other view fixes

--- a/hod/templates/hod.html
+++ b/hod/templates/hod.html
@@ -5,6 +5,13 @@
 <br><br>
 <div class="row">
     <div class="col s12 offset-m3 m6">
+      <a href="/login/hod/att/">
+        <div class="card">
+            <div class="card-content">
+                <span class="card-title black-text">{% trans 'Attendance' %}</span>
+              </div>
+          </div>
+        </a>
       <a href="/login/hod/classtchr/">
         <div class="card">
             <div class="card-content">
