--- a/faculty/templates/facu.html
+++ b/faculty/templates/facu.html
@@ -5,21 +5,14 @@
 <br><br>
 <div class="row">
     <div class="col s12 offset-m3 m6">
-      <a href="/login/clsteacher/att/">
+      <a href="/login/faculty/att/">
         <div class="card">
             <div class="card-content">
                 <span class="card-title black-text">{% trans 'Attendance' %}</span>
               </div>
           </div>
         </a>
-      <a href="/login/clsteacher/faculty/">
-        <div class="card">
-            <div class="card-content">
-                <span class="card-title black-text">{% trans 'Faculty List' %}</span>
-              </div>
-          </div>
-        </a>
-        <a href="/login/clsteacher/student/">
+        <a href="/login/faculty/student/">
           <div class="card">
               <div class="card-content">
                   <span class="card-title black-text">{% trans 'Student List' %}</span>
