--- a/hod/templates/base_site.html
+++ b/hod/templates/base_site.html
@@ -1,3 +1,3 @@
 {% extends "base.html" %}
 
-{% block title %}{{ title }} | {{ site_title|default:_('LOGIN') }}{% endblock %}
+{% block title %}{{ title }} | {{ site_title|default:_('HOD') }}{% endblock %}
